<resources>
    <string name="app_name">Parkey</string>
    <string name="login">Login</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One time Password on this mobile number</string>
    <string name="get_otp">Get OTP</string>
    <string name="conti">Continue</string>
    <string name="select_who_you_are">Select Who You Are?</string>
    <string name="verify">Verify</string>
    <string name="image">image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <array name="menuOptions">
        <item>Home</item>
        <item>About</item>
        <item>Share</item>
        <item>About Developers</item>
        <item>Privacy policy</item>
        <item>Terms &amp; Conditions</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="voice">Voice</string>
    <string name="submit">Submit</string>
    <string name="click">Click</string>
    <string name="scan">Scan</string>
    <string name="scanner">Scanner</string>
    <string name="nearby_parking">Nearby\nParkings</string>
    <string name="enter_your_vehicle_number">Enter your Vehicle number</string>

</resources>