<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/get_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/lexend"
        android:gravity="center"
        android:padding="13dp"
        android:text="@string/get_otp"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layoutSearch"
        app:layout_constraintStart_toStartOf="@+id/layoutSearch"
        app:layout_constraintTop_toBottomOf="@+id/pin_view"
         />

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_rect"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_user"
            app:tint="@color/main_color" />


        <EditText
            android:id="@+id/name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:letterSpacing=".05"
            android:fontFamily="@font/lexend"
            android:hint="@string/enter_your_name"
            android:maxLength="10"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="30dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_flag" />


        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:fontFamily="@font/lexend"
            android:hint="Phone Number"
            android:includeFontPadding="false"
            android:inputType="number"
            android:letterSpacing=".05"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/lexend"
        android:gravity="center"
        android:text="@string/otp_verification"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lexend"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/we_will_send_you_an_one_time_password_on_this_mobile_number"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <com.chaos.view.PinView
        android:id="@+id/pin_view"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="#65EAEAEA"
        app:cursorColor="@color/black"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        android:visibility="gone"
        app:itemHeight="50dp"
        app:itemRadius="5dp"
        app:itemWidth="50dp"
        app:layout_constraintEnd_toEndOf="@+id/layoutSearch"
        app:layout_constraintStart_toStartOf="@+id/layoutSearch"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearch"
        app:lineColor="@color/barn_red"
        app:lineWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>